--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //协程
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
+//    implementation 'android.arch.lifecycle:extensions:1.1.1'
+//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0-M1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.0-M1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha01"
     //retrofit2+okhttp3
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
