--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //便于 使用ViewModel-ktx扩展
+    implementation 'androidx.activity:activity-ktx:1.1.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.5'
+
     //协程
 //    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0-M1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.0-M1'
@@ -56,10 +60,15 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
+
     //paging
 //    implementation 'androidx.paging:paging-runtime::3.0.0-alpha07'
+    
     //hilt
     implementation 'com.google.dagger:hilt-android:2.28-alpha'
     kapt 'com.google.dagger:hilt-android-compiler:2.28-alpha'
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
+
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
