--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.version_code = 1
+    ext.version_name = "1.0.0"
+
     ext.kotlin_version = "1.4.0"
+    ext.compile_sdk_version = 30
+    ext.build_tools_version = '30.0.2'
+    ext.min_sdk_version = 23
+    ext.target_sdk_version = 30
+
+
     repositories {
         google()
-//        jcenter()
-        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+        jcenter()
+//        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/' }
+//        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
     }
@@ -17,9 +26,9 @@ buildscript {
 allprojects {
     repositories {
         google()
-//        jcenter()
-        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
+        jcenter()
+//        maven{ url'http://maven.aliyun.com/nexus/content/groups/public/' }
+//        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
     }
 }
 
